# JustHireMe

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
backend/: README.md  force_model.py  llm.py  log_context.py  logger.py  main.py  mcp_server.py  pyproject.toml  run_diagnostics.py  update_settings.py
backend/agents/: actuator.py  browser_runtime.py  contact_lookup.py  evaluator.py  feedback_ranker.py  free_scout.py  generator.py  github_ingestor.py  help_agent.py  ingestor.py  lead_intel.py  portfolio_ingestor.py  quality_gate.py  scoring_engine.py  scout.py  selectors.py  x_scout.py
backend/config/: __init__.py  app.py  contact.py  generator.py  llm.py  logging.py  resolver.py  scoring.py  scraping.py  secrets.py
backend/core/: config_constants.py  ws_manager.py
backend/db/: client.py
backend/graph/: __init__.py
backend/routes/: actions.py  ingest.py  leads.py  misc.py  profile.py  scan.py  settings.py  ws.py
backend/schemas/: requests.py  responses.py
backend/services/: generator.py  ghost.py  job_targets.py  provider_probe.py  scanner.py  scout.py
backend/tests/: TEST_DOCS.md  api_contracts.py  conftest.py  fakes.py  test_api.py  test_ghost_service.py  test_graph.py  test_graph_failures.py  test_log_context.py  test_mcp_server.py  test_observability.py  test_paths.py  test_regressions.py  test_response_contracts.py  test_scan_manager.py  test_secrets.py  test_sqlite.py  test_sqlite_reliability.py  test_startup.py  test_websocket.py
docs/: ARCHITECTURE.md  linux-release.md
(+154 files in other folders)
