[project]
name = "backend"
version = "0.1.25"
description = "FastAPI sidecar for JustHireMe's local-first job intelligence workbench"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
    "anthropic>=0.49.0",
    "openai>=1.30.0",
    "instructor>=1.3.0",
    "kuzu>=0.7.0",
    "lancedb>=0.17.0",
    "langchain-core>=1.3.3",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "playwright>=1.44.0",
    "html2text>=2024.2.26",
    "httpx>=0.27.0",
    "fpdf2>=2.7.0",
    "markdown>=3.6",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.27",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider -m 'not external'"
markers = [
    "integration: tests that cross component boundaries (routing, graph orchestration)",
    "external: tests that write to filesystem or rely on external services",
    "requires_browser: tests that require browser automation (Playwright/Chromium)",
]
